Navigation Bar Functionality Fix
Fixed tab funtionality for navigation bar

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -29,11 +29,11 @@
       </a>
       <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav nav-spacing">
-          <a class="nav-item nav-link nav-five-spacing active" href="index.html">Home</a>
-          <a class="nav-item nav-link nav-five-spacing" href="about.html">About</a>
-          <a class="nav-item nav-link nav-five-spacing" href="Resume.html">Resume</a>
-          <a class="nav-item nav-link nav-five-spacing" href="Projects.html">Projects</a>
-          <a class="nav-item nav-link nav-five-spacing" href="Contact.html">Contact</a>
+          <a class="nav-item nav-link active" href="index.html">Home</a>
+          <a class="nav-item nav-link" href="about.html">About</a>
+          <a class="nav-item nav-link" href="Resume.html">Resume</a>
+          <a class="nav-item nav-link" href="Projects.html">Projects</a>
+          <a class="nav-item nav-link" href="Contact.html">Contact</a>
         </div>
       </div>
 
