--- a/bootstrap/projects.html
+++ b/bootstrap/projects.html
@@ -28,12 +28,12 @@
         <img src="images/logo-wide.png" alt="Website Logo" height="30px">
       </a>
       <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link active nav-spacing" href="index.html">Home</a>
-          <a class="nav-item nav-link nav-spacing" href="about.html">About</a>
-          <a class="nav-item nav-link nav-spacing" href="Resume.html">Resume</a>
-          <a class="nav-item nav-link nav-spacing" href="Projects.html">Projects</a>
-          <a class="nav-item nav-link nav-spacing" href="Contact.html">Contact</a>
+        <div class="navbar-nav nav-spacing">
+          <a class="nav-item nav-link" href="index.html">Home</a>
+          <a class="nav-item nav-link" href="about.html">About</a>
+          <a class="nav-item nav-link" href="Resume.html">Resume</a>
+          <a class="nav-item nav-link active" href="Projects.html">Projects</a>
+          <a class="nav-item nav-link" href="Contact.html">Contact</a>
         </div>
       </div>
 
