--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -46,28 +46,25 @@
     </button>
     -->
     </nav>
+
+
     <div class="background-logo-container">
       <img src="images/websiteLogoWithImage-dark.png" class="img-fluid img-spacing">
     </div>
 
-    <!--
-    <div class="container">
-      <div class="row row-spacer"></div>
-      <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-2">
-            <p class="background-logo-character" id="n-character">N</p>
-        </div>
-        <div class="col-sm-4">
-          <img src="images/Professional-Headshot.jpg" class="rounded-circle img-fluid img-spacing">
-          <p class="background-logo-character" id="slash-character">//</p>
-        </div>
-        <div class="col-sm-2">
-            <p class="background-logo-character" id="d-character">D</p>
-        </div>
-        <div class="col-sm-2"></div>
-      </div>
+    <div class="body-content body-header-accent">
+      <p id="hello-world-animation"></p>
     </div>
-    -->
   </body>
+  <script>
+    function onload() {
+
+    }
+
+    window.addEventListener("load", function() {
+      for(i = 0; i < 12; i++) {
+        
+      }
+    });
+  </script>
 </html>
