--- a/bootstrap/about.html
+++ b/bootstrap/about.html
@@ -34,6 +34,7 @@
           <a class="nav-item nav-link" href="Resume.html">Resume</a>
           <a class="nav-item nav-link" href="Projects.html">Projects</a>
           <a class="nav-item nav-link" href="Contact.html">Contact</a>
+          <a class="nav-item nav-link nav-dropdown" href="#">Login</a>
         </div>
       </div>
 
