--- a/bootstrap/contact.html
+++ b/bootstrap/contact.html
@@ -1,51 +1,78 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-       "http://www.w3.org/TR/html4/loose.dtd">
-       
+        "http://www.w3.org/TR/html4/loose.dtd">
+
 <!-- DEVELOPMENT COPY OF CODE - NOT USED FOR DEPLOYMENT -->
 <html>
-  <head>
-    <title>Home</title>
-    <!--
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    -->
-    <link href="style.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap-grid.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap-grid.min.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap-reboot.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap-reboot.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--<meta http-equiv="Refresh" content="0;url=placeholder.html" />-->
-  </head>
-  <script src="imports/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  <script src="imports/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="imports/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="imports/bootstrap/dist/js/bootstrap.min.js"></script>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#999999">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/logo-wide.png" alt="Website Logo" height="30px">
-      </a>
-      <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav nav-spacing">
-          <a class="nav-item nav-link" href="index.html">Home</a>
-          <a class="nav-item nav-link" href="about.html">About</a>
-          <a class="nav-item nav-link" href="Resume.html">Resume</a>
-          <a class="nav-item nav-link" href="Projects.html">Projects</a>
-          <a class="nav-item nav-link active" href="Contact.html">Contact</a>
-          <a class="nav-item nav-link nav-dropdown" href="#">Login</a>
-        </div>
-      </div>
+    <head>
+        <title>Home</title>
+        <!--
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        -->
+        <link href="style.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap-grid.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap-grid.min.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap-reboot.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap-reboot.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <script src="imports/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="imports/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="imports/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="imports/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="imports/jquery/jquery-3.4.1.min.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function () {
 
-      <!-- Button used for Mobile -->
-      <!--
-      <button class="navbar-toggler" type="button" data-toggle="collapse" 
-        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    -->
-    </nav>
-  </body>
+            });
+        </script>
+    </head>
+    <body>
+        <!-- Code for Modal Windows -->
+        <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
+             aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header text-center">
+                        <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body mx-3">
+                        <div class="md-form mb-5">
+                            <i class="fas fa-envelope prefix grey-text"></i>
+                            <input type="text" id="defaultForm-email" class="form-control validate">
+                            <label data-error="wrong" data-success="right" for="defaultForm-email">Your email</label>
+                        </div>
+
+                        <div class="md-form mb-4">
+                            <i class="fas fa-lock prefix grey-text"></i>
+                            <input type="password" id="defaultForm-pass" class="form-control validate">
+                            <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer d-flex justify-content-center">
+                        <button class="btn btn-default">Login</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#999999">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo-wide.png" alt="Website Logo" height="30px">
+            </a>
+            <div class="collapse navbar-collapse" id="navbar">
+                <div class="navbar-nav nav-spacing">
+                    <a class="nav-item nav-link" href="index.html">Home</a>
+                    <a class="nav-item nav-link" href="about.html">About</a>
+                    <a class="nav-item nav-link" href="Resume.html">Resume</a>
+                    <a class="nav-item nav-link" href="Projects.html">Projects</a>
+                    <a class="nav-item nav-link active" href="Contact.html">Contact</a>
+                    <a class="nav-item nav-link" href="#" id="navBarLogin" data-toggle="modal" data-target="#modalLoginForm">Login</a>
+                </div>
+            </div>
+        </nav>
+    </body>
 </html>
