--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,77 +1,115 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-       "http://www.w3.org/TR/html4/loose.dtd">
-       
+        "http://www.w3.org/TR/html4/loose.dtd">
+
 <!-- DEVELOPMENT COPY OF CODE - NOT USED FOR DEPLOYMENT -->
 <html>
-  <head>
-    <title>Home</title>
-    <link href="style.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap-grid.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap-grid.min.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap-reboot.css" rel="stylesheet">
-    <link href="imports/bootstrap/dist/css/bootstrap-reboot.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </head>
-  <script src="imports/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  <script src="imports/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="imports/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="imports/bootstrap/dist/js/bootstrap.min.js"></script>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#999999">
-      <a class="navbar-brand" href="index.html">
-        <img src="images/logo-wide.png" alt="Website Logo" height="30px">
-      </a>
-      <div class="collapse navbar-collapse" id="navbar">
-        <div class="navbar-nav nav-spacing">
-          <a class="nav-item nav-link active" href="index.html">Home</a>
-          <a class="nav-item nav-link" href="about.html">About</a>
-          <a class="nav-item nav-link" href="Resume.html">Resume</a>
-          <a class="nav-item nav-link" href="Projects.html">Projects</a>
-          <a class="nav-item nav-link" href="Contact.html">Contact</a>
-          <a class="nav-item nav-link dropdown-toggle" href="#" id="navBarLogin" onclick="toggleLoginMenu()">Login</a>
-          <div class="dropdown-menu" id="login-dropdown">
-            <p>Username</p>
-            <input type="text" class="user-text-field" id="username-text-field">
-            <p>Password</p>
-            <input type="password" class="user-text-field" id="password-text-field">
-          </div>
+    <head>
+        <title>Home</title>
+        <link href="style.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap-grid.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap-grid.min.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap-reboot.css" rel="stylesheet">
+        <link href="imports/bootstrap/dist/css/bootstrap-reboot.min.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <script src="imports/jquery/jquery-3.4.1.min.js"></script>
+        <script src="imports/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="imports/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="imports/bootstrap/dist/js/bootstrap.js"></script>
+        <script src="imports/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script type="text/javascript">
+            window.addEventListener("load", onload);
+
+            function onload() {
+
+            }
+
+            function onSignIn(googleUser) {
+                // Useful data for your client-side scripts:
+                var profile = googleUser.getBasicProfile();
+                console.log("ID: " + profile.getId()); // Don't send this directly to your server!
+                console.log('Full Name: ' + profile.getName());
+                console.log('Given Name: ' + profile.getGivenName());
+                console.log('Family Name: ' + profile.getFamilyName());
+                console.log("Image URL: " + profile.getImageUrl());
+                console.log("Email: " + profile.getEmail());
+
+                // The ID token you need to pass to your backend:
+                var id_token = googleUser.getAuthResponse().id_token;
+                console.log("ID Token: " + id_token);
+            }
+
+            $( document ).ready(function() {
+                $('#navBarLogin').click(function () {
+                    $('#my-modal').modal({
+                        show: true,
+                        closeOnEscape: true
+                    });
+                });
+            });
+        </script>
+    </head>
+    <body>
+        <!-- Code for Modal Windows -->
+        <!-- Centering code utilized from : https://stackoverflow.com/questions/18053408/vertically-centering-bootstrap-modal-window -->
+        <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="modalLabel"
+             aria-hidden="true">
+            <div class="vertical-alignment-helper">
+                <div class="modal-dialog vertical-align-center" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header text-center">
+                            <h4 class="modal-title w-100 font-weight-bold">Sign in</h4>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body mx-3">
+                            <div class="md-form mb-5">
+                                <i class="material-icons">email</i>
+                                <input type="text" id="defaultForm-username" class="form-control validate">
+                                <label data-error="wrong" data-success="right" for="defaultForm-username">Your email</label>
+                            </div>
+
+                            <div class="md-form mb-4">
+                                <i class="material-icons">lock</i>
+                                <input type="password" id="defaultForm-pass" class="form-control validate">
+                                <label data-error="wrong" data-success="right" for="defaultForm-pass">Your password</label>
+                            </div>
+
+                        </div>
+                        <div class="modal-footer d-flex justify-content-center">
+                            <button class="btn btn-default login-button">Login</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
 
-      <!-- Button used for Mobile -->
-      <!--
-      <button class="navbar-toggler" type="button" data-toggle="collapse" 
-        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    -->
-    </nav>
+        <!-- Code for webpage -->
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#999999">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo-wide.png" alt="Website Logo" height="30px">
+            </a>
+            <div class="collapse navbar-collapse" id="navbar">
+                <div class="navbar-nav nav-spacing">
+                    <a class="nav-item nav-link active" href="index.html">Home</a>
+                    <a class="nav-item nav-link" href="about.html">About</a>
+                    <a class="nav-item nav-link" href="resume.html">Resume</a>
+                    <a class="nav-item nav-link" href="projects.html">Projects</a>
+                    <a class="nav-item nav-link" href="contact.html">Contact</a>
+                    <a class="nav-item nav-link" href="#" id="navBarLogin" data-toggle="modal" data-target="#modalLoginForm">Login</a>
+                </div>
+            </div>
+        </nav>
 
 
-    <div class="background-logo-container">
-      <img src="images/websiteLogoWithImage-dark.png" class="img-fluid img-spacing">
-    </div>
+        <div class="background-logo-container">
+            <img src="images/websiteLogoWithImage-dark.png" class="img-fluid img-spacing">
+        </div>
 
-    <div class="body-content body-header-accent">
-      <p id="hello-world-animation"></p>
-    </div>
-  </body>
-  <script>
-    var loginMenuOpen = false;
-
-    function onload() {
-
-    }
-
-    function toggleLoginMenu() {
-
-    }
-
-    window.addEventListener("load", function() {
-
-    });
-  </script>
+        <div class="body-content body-header-accent">
+            <p id="hello-world-animation"></p>
+        </div>
+    </body>
 </html>
