--- a/bootstrap/projects.html
+++ b/bootstrap/projects.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-       "http://www.w3.org/TR/html4/loose.dtd">
-       
+        "http://www.w3.org/TR/html4/loose.dtd">
+
 <!-- DEVELOPMENT COPY OF CODE - NOT USED FOR DEPLOYMENT -->
 <html>
-  <head>
+<head>
     <title>Home</title>
     <!--
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,36 +16,36 @@
     <link href="imports/bootstrap/dist/css/bootstrap-reboot.css" rel="stylesheet">
     <link href="imports/bootstrap/dist/css/bootstrap-reboot.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!--<meta http-equiv="Refresh" content="0;url=placeholder.html" />-->
-  </head>
-  <script src="imports/bootstrap/dist/js/bootstrap.bundle.js"></script>
-  <script src="imports/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="imports/bootstrap/dist/js/bootstrap.js"></script>
-  <script src="imports/bootstrap/dist/js/bootstrap.min.js"></script>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#999999">
-      <a class="navbar-brand" href="index.html">
+    <script src="imports/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    <script src="imports/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="imports/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="imports/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="imports/jquery/jquery-3.4.1.min.js"></script>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color:#999999">
+    <a class="navbar-brand" href="index.html">
         <img src="images/logo-wide.png" alt="Website Logo" height="30px">
-      </a>
-      <div class="collapse navbar-collapse" id="navbar">
+    </a>
+    <div class="collapse navbar-collapse" id="navbar">
         <div class="navbar-nav nav-spacing">
-          <a class="nav-item nav-link" href="index.html">Home</a>
-          <a class="nav-item nav-link" href="about.html">About</a>
-          <a class="nav-item nav-link" href="Resume.html">Resume</a>
-          <a class="nav-item nav-link active" href="Projects.html">Projects</a>
-          <a class="nav-item nav-link" href="Contact.html">Contact</a>
-          <a class="nav-item nav-link nav-dropdown" href="#">Login</a>
+            <a class="nav-item nav-link" href="index.html">Home</a>
+            <a class="nav-item nav-link" href="about.html">About</a>
+            <a class="nav-item nav-link" href="Resume.html">Resume</a>
+            <a class="nav-item nav-link active" href="Projects.html">Projects</a>
+            <a class="nav-item nav-link" href="Contact.html">Contact</a>
+            <a class="nav-item nav-link nav-dropdown" href="#">Login</a>
         </div>
-      </div>
+    </div>
 
-      <!-- Button used for Mobile -->
-      <!--
-      <button class="navbar-toggler" type="button" data-toggle="collapse" 
-        data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" 
-        aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    -->
-    </nav>
-  </body>
+    <!-- Button used for Mobile -->
+    <!--
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+      data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  -->
+</nav>
+</body>
 </html>
