Added background image to index.html

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -87,7 +87,7 @@
         </div>
 
         <!-- Code for webpage -->
-        <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#999999">
+        <nav class="navbar navbar-expand-lg navbar-color">
             <a class="navbar-brand" href="index.html">
                 <img src="images/logo-wide.png" alt="Website Logo" height="30px">
             </a>
@@ -103,9 +103,12 @@
             </div>
         </nav>
 
+        <div id="backgroundImg">
+            <img class="body-content" src="images/forest-background-3b.png" alt="Forest Background">
+        </div>
 
         <div class="background-logo-container">
-            <img src="images/websiteLogoWithImage-dark.png" class="img-fluid img-spacing">
+            <img src="images/websiteLogoWithImage.png" class="img-fluid img-spacing">
         </div>
 
         <div class="body-content body-header-accent">
